# SimplePGP

./: .gitignore  Cargo.toml  README.md  build.rs
data/: org.tailsos.simplepgp.desktop
scripts/: install-linux.sh  install-tails.sh  uninstall-linux.sh
src/: app.rs  main.rs
src/models/: key.rs  mod.rs
src/security/: memory.rs  mod.rs  secure_clear.rs
src/services/: gpg_service.rs  mod.rs
src/ui/: about.rs  decrypt_view.rs  dialogs.rs  encrypt_view.rs  key_list_view.rs  main_window.rs  mod.rs
src/utils/: async_runtime.rs  clipboard.rs  mod.rs
src/viewmodels/: crypto_vm.rs  key_list_vm.rs  mod.rs
