[package]
name = "simplepgp"
version = "0.1.0"
edition = "2021"
description = "Privacy-focused SimplePGP app for Tails OS"
license = "Apache-2.0"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4", "v1_5"] }
glib = "0.20"
async-channel = "2"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
